# group-m-finm33150-final

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
data/: candles.parquet  funding_rates.parquet  liquidation_volume.parquet  liquidations.parquet  open_interest.parquet  orderbook_depth.parquet  reserve_prices.parquet
docs/: README.md  backtest.md  data.md  models.md  strategy.md
jump/: PROPOSAL_A_JUMP_DIFFUSION_LIQUIP.md  PROPOSAL_B_CASCADE_LIQUIP.md  VALIDATION_PLAN.md  jump_diffusion_liquip.py
notebooks/: final.ipynb
pitchbook/: main.typ
scripts/: backfill_data.py  export_figures.py  plot_oi_timeseries.py  pull_data.py
src/funding_the_fall/: __init__.py
src/funding_the_fall/backtest/: __init__.py  costs.py  engine.py  performance.py
src/funding_the_fall/data/: __init__.py  fetchers.py  lending.py  storage.py
src/funding_the_fall/models/: __init__.py  cascade.py  compare.py  kou.py  merton.py  risk.py
src/funding_the_fall/notebooks/: backtest.py  config.py  eda.py  models.py  spreads.py  strategy.py
src/funding_the_fall/strategy/: __init__.py  allocation.py  carry.py
tests/: conftest.py  test_allocation.py  test_carry.py  test_cascade.py  test_compare.py  test_costs.py  test_kou.py  test_merton.py  test_risk.py  test_smoke.py  test_storage.py
