[project]
name = "group-m-finm33150-final"
version = "0.1.0"
description = "Cross-venue carry and cascade alpha in crypto perpetuals"
readme = "README.md"
authors = [
    { name = "John Beecher" },
    { name = "Antonio Magalhaes Torreao e Braz" },
    { name = "Jean-Luc Choiseul" },
    { name = "Jean Mauratille" },
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "polars>=1.36.1",
    "requests>=2.32.0",
    "scipy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "funding_the_fall"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.20",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require real parquet data files",
]
